add forms to body for questionaire
Co-authored-by: Jason Khan <jasonderekkhan@gmail.com>

--- a/index.html
+++ b/index.html
@@ -1,19 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="css/styles.css" rel="stylesheet" type="text/css">
-  <link href="css/bootstrap.css" rel ="stylesheet" type="text/css" media="all">
-  <title>Document</title>
-</head>
-<body>
-  <jumbotron>
-    <h1>Celebrity Dating Quiz!</h1>
-    <h4>Which celebrity would you be most compatible with?</h4>
-  </jumbotron>
-  <p>Answer these questions and press submit to find out which Celebrity you would date.
-  </p>
-  
-</body>
+<html>
+  <head>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link href="css/bootstrap.css" rel ="stylesheet" type="text/css" media="all">
+    <title>Document</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="jumbotron"></div>
+        <h1>Celebrity Dating Quiz!</h1>
+        <h4>Which celebrity would you be most compatible with?</h4>
+      </div>
+      <p>Answer these questions and press submit to find out which Celebrity you would date.</p>
+
+      <h3>What is your favorite beverage?</h3>
+      <select class="form-control" id=beverage>
+        <option>Coffee</option>
+        <option>Juice</option>
+        <option>Whiskey</option>
+      </select>
+
+      <h3>Where is your dream vacation?</h3>
+      <select class="form-control" id=beverage>
+        <option>Paris</option>
+        <option>London</option>
+        <option>The Amazon</option>
+      </select>
+
+      <h3>What is your favorite Animal</h3>
+      <select class="form-control" id=beverage>
+        <option>Tiger</option>
+        <option>Dog</option>
+        <option>Cat</option>
+      </select>
+
+      <h3>What kind of weather do you like?</h3>
+      <select class="form-control" id=beverage>
+        <option>Sunny</option>
+        <option>Rainy</option>
+        <option>Snowing</option>
+      </select>
+
+      <h3>What kind of movies do you like?</h3>
+      <select class="form-control" id=beverage>
+        <option>Horror</option>
+        <option>Comedy</option>
+        <option>Drama</option>
+      </select>
+    </div>
+  </body>
 </html>
