add id's to form options
Co-authored-by: Jason Khan <jasonderekkhan@gmail.com>

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="jumbotron"></div>
+      <div class="jumbotron">
         <h1>Celebrity Dating Quiz!</h1>
         <h4>Which celebrity would you be most compatible with?</h4>
       </div>
@@ -15,37 +15,37 @@
 
       <h3>What is your favorite beverage?</h3>
       <select class="form-control" id=beverage>
-        <option>Coffee</option>
-        <option>Juice</option>
-        <option>Whiskey</option>
+        <option id="ryan">Coffee</option>
+        <option id="george">Juice</option>
+        <option id="brad">Whiskey</option>
       </select>
 
       <h3>Where is your dream vacation?</h3>
       <select class="form-control" id=beverage>
-        <option>Paris</option>
-        <option>London</option>
-        <option>The Amazon</option>
+        <option id="george">Paris</option>
+        <option id="brad">London</option>
+        <option id="ryan">The Amazon</option>
       </select>
 
       <h3>What is your favorite Animal</h3>
       <select class="form-control" id=beverage>
-        <option>Tiger</option>
-        <option>Dog</option>
-        <option>Cat</option>
+        <option id="george">Tiger</option>
+        <option id="brad">Dog</option>
+        <option id="ryan">Cat</option>
       </select>
 
       <h3>What kind of weather do you like?</h3>
       <select class="form-control" id=beverage>
-        <option>Sunny</option>
-        <option>Rainy</option>
-        <option>Snowing</option>
+        <option id="ryan">Sunny</option>
+        <option id="george">Rainy</option>
+        <option id="brad">Snowing</option>
       </select>
 
       <h3>What kind of movies do you like?</h3>
       <select class="form-control" id=beverage>
-        <option>Horror</option>
-        <option>Comedy</option>
-        <option>Drama</option>
+        <option id="brad">Action</option>
+        <option id="ryan">Comedy</option>
+        <option id="george">Drama</option>
       </select>
     </div>
   </body>
