add button to bottom of page
Co-authored-by: Jason Khan <jasonderekkhan@gmail.com>

--- a/index.html
+++ b/index.html
@@ -12,41 +12,43 @@
         <h4>Which celebrity would you be most compatible with?</h4>
       </div>
       <p>Answer these questions and press submit to find out which Celebrity you would date.</p>
+      <div id="form">
+        <h3>What is your favorite beverage?</h3>
+        <select class="form-control" id=beverage>
+          <option id="ryan">Coffee</option>
+          <option id="george">Juice</option>
+          <option id="brad">Whiskey</option>
+        </select>
 
-      <h3>What is your favorite beverage?</h3>
-      <select class="form-control" id=beverage>
-        <option id="ryan">Coffee</option>
-        <option id="george">Juice</option>
-        <option id="brad">Whiskey</option>
-      </select>
+        <h3>Where is your dream vacation?</h3>
+        <select class="form-control" id=vacation>
+          <option id="george">Paris</option>
+          <option id="brad">London</option>
+          <option id="ryan">The Amazon</option>
+        </select>
 
-      <h3>Where is your dream vacation?</h3>
-      <select class="form-control" id=beverage>
-        <option id="george">Paris</option>
-        <option id="brad">London</option>
-        <option id="ryan">The Amazon</option>
-      </select>
+        <h3>What is your favorite Animal</h3>
+        <select class="form-control" id=animal>
+          <option id="george">Tiger</option>
+          <option id="brad">Dog</option>
+          <option id="ryan">Cat</option>
+        </select>
 
-      <h3>What is your favorite Animal</h3>
-      <select class="form-control" id=beverage>
-        <option id="george">Tiger</option>
-        <option id="brad">Dog</option>
-        <option id="ryan">Cat</option>
-      </select>
+        <h3>What kind of weather do you like?</h3>
+        <select class="form-control" id=weather>
+          <option id="ryan">Sunny</option>
+          <option id="george">Rainy</option>
+          <option id="brad">Snowing</option>
+        </select>
 
-      <h3>What kind of weather do you like?</h3>
-      <select class="form-control" id=beverage>
-        <option id="ryan">Sunny</option>
-        <option id="george">Rainy</option>
-        <option id="brad">Snowing</option>
-      </select>
-
-      <h3>What kind of movies do you like?</h3>
-      <select class="form-control" id=beverage>
-        <option id="brad">Action</option>
-        <option id="ryan">Comedy</option>
-        <option id="george">Drama</option>
-      </select>
+        <h3>What kind of movies do you like?</h3>
+        <select class="form-control" id=movie>
+          <option id="brad">Action</option>
+          <option id="ryan">Comedy</option>
+          <option id="george">Drama</option>
+        </select>
+        <button type="submit" class="btn">Submit</button>
+      </div>
     </div>
   </body>
 </html>
